compiler/src/parser/snapshots/narwhal__parser__tests__expr#5.snap
---
source: src/parser/tests.rs
description: (x + y) * z
---
ExprInfix@0..11
  ExprParen@0..7
    LeftParen@0..1 "("
    ExprInfix@1..6
      Path@1..2
        PathComponent@1..2
          Ident@1..2 "x"
      Whitespace@2..3 " "
      Plus@3..4 "+"
      Path@4..6
        PathComponent@4..6
          Whitespace@4..5 " "
          Ident@5..6 "y"
    RightParen@6..7 ")"
  Whitespace@7..8 " "
  Star@8..9 "*"
  Path@9..11
    PathComponent@9..11
      Whitespace@9..10 " "
      Ident@10..11 "z"
