compiler/src/parser/snapshots/narwhal__parser__tests__expr_if#1.snap
---
source: src/parser/tests.rs
description: "if x { y; } else { z; }"
---
ExprIf@0..23
  IfKw@0..2 "if"
  Path@2..4
    PathComponent@2..4
      Whitespace@2..3 " "
      Ident@3..4 "x"
  Block@4..11
    Whitespace@4..5 " "
    LeftBrace@5..6 "{"
    StmtExpr@6..9
      Path@6..8
        PathComponent@6..8
          Whitespace@6..7 " "
          Ident@7..8 "y"
      Semicolon@8..9 ";"
    Whitespace@9..10 " "
    RightBrace@10..11 "}"
  Whitespace@11..12 " "
  ElseKw@12..16 "else"
  Block@16..23
    Whitespace@16..17 " "
    LeftBrace@17..18 "{"
    StmtExpr@18..21
      Path@18..20
        PathComponent@18..20
          Whitespace@18..19 " "
          Ident@19..20 "z"
      Semicolon@20..21 ";"
    Whitespace@21..22 " "
    RightBrace@22..23 "}"
