compiler/src/parser/snapshots/narwhal__parser__tests__expr_if#3.snap
---
source: src/parser/tests.rs
description: "if x {} else if y {} else if z {} else {}"
---
ExprIf@0..41
  IfKw@0..2 "if"
  Path@2..4
    PathComponent@2..4
      Whitespace@2..3 " "
      Ident@3..4 "x"
  Block@4..7
    Whitespace@4..5 " "
    LeftBrace@5..6 "{"
    RightBrace@6..7 "}"
  Whitespace@7..8 " "
  ElseKw@8..12 "else"
  ExprIf@12..41
    Whitespace@12..13 " "
    IfKw@13..15 "if"
    Path@15..17
      PathComponent@15..17
        Whitespace@15..16 " "
        Ident@16..17 "y"
    Block@17..20
      Whitespace@17..18 " "
      LeftBrace@18..19 "{"
      RightBrace@19..20 "}"
    Whitespace@20..21 " "
    ElseKw@21..25 "else"
    ExprIf@25..41
      Whitespace@25..26 " "
      IfKw@26..28 "if"
      Path@28..30
        PathComponent@28..30
          Whitespace@28..29 " "
          Ident@29..30 "z"
      Block@30..33
        Whitespace@30..31 " "
        LeftBrace@31..32 "{"
        RightBrace@32..33 "}"
      Whitespace@33..34 " "
      ElseKw@34..38 "else"
      Block@38..41
        Whitespace@38..39 " "
        LeftBrace@39..40 "{"
        RightBrace@40..41 "}"
