compiler/src/parser/snapshots/narwhal__parser__tests__stmt_while#0.snap
---
source: src/parser/tests.rs
description: "while x < 10 { x += 1; }"
---
StmtWhile@0..24
  WhileKw@0..5 "while"
  ExprInfix@5..12
    Path@5..7
      PathComponent@5..7
        Whitespace@5..6 " "
        Ident@6..7 "x"
    Whitespace@7..8 " "
    Lt@8..9 "<"
    Whitespace@9..10 " "
    Int@10..12 "10"
  Block@12..24
    Whitespace@12..13 " "
    LeftBrace@13..14 "{"
    StmtExpr@14..22
      ExprAssign@14..21
        Path@14..16
          PathComponent@14..16
            Whitespace@14..15 " "
            Ident@15..16 "x"
        Whitespace@16..17 " "
        PlusEquals@17..19 "+="
        Whitespace@19..20 " "
        Int@20..21 "1"
      Semicolon@21..22 ";"
    Whitespace@22..23 " "
    RightBrace@23..24 "}"
