compiler/src/parser/snapshots/narwhal__parser__tests__type_expr#0.snap
---
source: src/parser/tests.rs
description: fn()
---
TypeFunction@0..4
  FnKw@0..2 "fn"
  LeftParen@2..3 "("
  RightParen@3..4 ")"
