compiler/src/parser/snapshots/narwhal__parser__tests__type_expr#2.snap
---
source: src/parser/tests.rs
description: Int
---
Path@0..3
  PathComponent@0..3
    Ident@0..3 "Int"
